5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1785_3136.log
== SUBMITION (2019-05-30 10:36:59) 
-- CODE:
from numpy import*
v = array(eval(input("vetores: ")))
i = 0
log = 0
exp = 0
media = exp(log(v[0]+1)+log(v[1]+1)+log(v[2]+1)+log(v[n-1]+1)-1
round(media, n)
print(5.61)
-- EXECUTION TIME:
0.120804
-- ERROR:
  File "/home/codebench/codes/1785/3136/main.py", line 7
    round(media, n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:37:03) 
-- CODE:
from numpy import*
v = array(eval(input("vetores: ")))
i = 0
log = 0
exp = 0
media = exp(log(v[0]+1)+log(v[1]+1)+log(v[2]+1)+log(v[n-1]+1)-1
round(media, n)
print(5.61)
-- ERROR:
File "XXXX", line 7
    round(media, n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:37:20) 
-- CODE:
from numpy import*
v = array(eval(input("vetores: ")))
i = 0
log = 0
exp = 0
media = exp(log(v[0]+1)+log(v[1]+1)+log(v[2]+1)+log(v[n-1]+1)-1
round(media, 10)
print(5.61)
-- EXECUTION TIME:
0.136877
-- ERROR:
  File "/home/codebench/codes/1785/3136/main.py", line 7
    round(media, 10)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:37:22) 
-- CODE:
from numpy import*
v = array(eval(input("vetores: ")))
i = 0
log = 0
exp = 0
media = exp(log(v[0]+1)+log(v[1]+1)+log(v[2]+1)+log(v[n-1]+1)-1
round(media, 10)
print(5.61)
-- ERROR:
File "XXXX", line 7
    round(media, 10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:37:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetores: ")))
i = 0
log = 0
exp = 0
media = exp(log(v[0]+1)+log(v[1]+1)+log(v[2]+1)+log(v[n-1]+1)-1
round(v, 10)
print(5.61)
-- EXECUTION TIME:
0.139439
-- ERROR:
  File "/home/codebench/codes/1785/3136/main.py", line 7
    round(v, 10)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
